--- a/index.html
+++ b/index.html
@@ -3,55 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tablo Örneği</title>
-    <style>
-        table {
-            width: 50%;
-            border-collapse: collapse;
-            margin: 20px auto;
-            font-family: Arial, sans-serif;
-            text-align: center;
-        }
-        th, td {
-            border: 1px solid #000;
-            padding: 8px;
-        }
-        th {
-            background-color: #f4f4f4;
-        }
-    </style>
+    <title>Bootstrap Accordion Örneği</title>
+    <!-- Bootstrap CSS -->
+    <link 
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" 
+        rel="stylesheet" 
+        integrity="sha384-QP1zAfM+8if8zBfGBZgXrjA3WcZDnB3iAB+e+KwX1rf3AI+fsAnE3szbEMpLUy3m" 
+        crossorigin="anonymous">
 </head>
 <body>
-    <h1 style="text-align: center;">Tablo Örneği</h1>
-    <table>
-        <thead>
-            <tr>
-                <th>#</th>
-                <th>Ad</th>
-                <th>Soyad</th>
-                <th>Yaş</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>1</td>
-                <td>Ali</td>
-                <td>Yılmaz</td>
-                <td>25</td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>Ayla</td>
-                <td>Demir</td>
-                <td>30</td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>Can</td>
-                <td>Kaya</td>
-                <td>35</td>
-            </tr>
-        </tbody>
-    </table>
-</body>
-</html>
+    <div class="container mt-5">
+        <h1 class="text-center mb-4">Bootstrap Accordion Örneği</h1>
+        <div class="accordion" id="accordionExample">
+            <!-- Accordion Item 1 -->
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingOne">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        Bölüm 1: Genel Bilgiler
+                    </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        <strong>Bu bölümde genel bilgiler yer alır.</strong> 
+                        HTML, CSS ve JavaScript gibi temel web teknolojilerinden bahsediyoruz.
+                        <ul>
+                            <li>HTML: Yapı</li>
+                            <li>CSS: Stil</li>
+                            <li>JavaScript: Dinamiklik</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Accordion Item 2 -->
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        Bölüm 2: Resim Galerisi
+                    </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        <strong>Burada bir resim galerisi bulunmaktadır:</strong>
+                        <div class="d-flex justify-content-center gap-2">
+                            <img src="https://via.placeholder.com/100" alt="Resim 1" class="img-thumbnail">
+                            <img src="https://via.placeholder.com/100" alt="Resim 2" class="img-thumbnail">
+                            <img src="https://via.placeholder.com/100" alt="Resim 3" class="img-thumbnail">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Accordion Item 3 -->
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingThree">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        Bölüm 3: Faydalı Bağlantılar
+                    </button>
+                </h2>
+                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        <strong>Bu bölümde faydalı bağlantılar yer alır:</strong>
+                        <ul>
+                            <li><a href="https://getbootstrap.com" target="_blank">Bootstrap Resmi Sitesi
